<resources>
    <string name="app_name">Calculator_OA</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="times">*</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="close">)</string>
    <string name="open">(</string>
    <string name="clear">CE</string>
</resources>
