<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Expression"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textColor="@color/numberactionBTN"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/CalResult"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textColor="@color/numberactionBTN"
        android:gravity="end"
        android:textSize="30sp"
        android:ellipsize="end"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Clear"
                style="@style/ActionBTNStyle"
                android:text="@string/clear"/>

            <TextView
                android:id="@+id/OBrac"
                style="@style/ActionBTNStyle"
                android:text="@string/open"/>

            <TextView
                android:id="@+id/CBrac"
                style="@style/ActionBTNStyle"
                android:text="@string/close"/>

            <TextView
                android:id="@+id/Divide"
                style="@style/ActionBTNStyle"
                android:text="@string/div"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Seven"
                style="@style/NumberBTNStyle"
                android:text="@string/_7"/>
            <TextView
                android:id="@+id/Eight"
                style="@style/NumberBTNStyle"
                android:text="8"/>
            <TextView
                android:id="@+id/Nine"
                style="@style/NumberBTNStyle"
                android:text="@string/_9"/>
            <TextView
                android:id="@+id/Times"
                style="@style/ActionBTNStyle"
                android:text="@string/times"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Four"
                style="@style/NumberBTNStyle"
                android:text="@string/_4"/>
            <TextView
                android:id="@+id/Five"
                style="@style/NumberBTNStyle"
                android:text="@string/_5"/>
            <TextView
                android:id="@+id/Six"
                style="@style/NumberBTNStyle"
                android:text="@string/_6"/>
            <TextView
                android:id="@+id/Minus"
                style="@style/ActionBTNStyle"
                android:text="@string/minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/One"
                style="@style/NumberBTNStyle"
                android:text="@string/_1"/>
            <TextView
                android:id="@+id/Two"
                style="@style/NumberBTNStyle"
                android:text="@string/_2"/>
            <TextView
                android:id="@+id/Three"
                style="@style/NumberBTNStyle"
                android:text="@string/_3"/>
            <TextView
                android:id="@+id/Plus"
                style="@style/ActionBTNStyle"
                android:text="@string/plus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Dot"
                style="@style/NumberBTNStyle"
                android:text="@string/dot"/>
            <TextView
                android:id="@+id/Zero"
                style="@style/NumberBTNStyle"
                android:text="@string/zero"/>
            <ImageView
                android:id="@+id/Back"
                style="@style/NumberBTNStyle"
                android:src="@drawable/backspace"
                android:scaleType="center"/>
            <TextView
                android:id="@+id/Equal_to"
                style="@style/ActionBTNStyle"
                android:text="@string/equal"
                android:background="@android:color/holo_blue_light" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>